display the big data

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,11 +8,10 @@ a {
 }
 
 svg rect {
-   fill: green;
+   fill: gray;
 }
 
 svg text {
-   fill: yellow;
-   font: 12px sans-serif;
-   text-anchor: end;
+   fill: black;
+   font: 15px sans-serif;
 }
