--- a/views/index.pug
+++ b/views/index.pug
@@ -1,11 +1,12 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 American Housing Survey Data Visualization
+  p Total usable entries: #{title}
+  ul
+  each val, index in body
+    li#data= index + ': ' + val
+  br
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   script
       include ../routes/d3.js
-  ul
-  each val, index in body
-    li= index + ': ' + val
