use https for security

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,7 +10,7 @@ block content
   each val, index in body
     li#data= index + ': ' + val
   br
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
   script
       include ../routes/d3.js
   ul
