--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,10 @@ block content
   h4 Filters:
   <button onClick="window.location='?citizen=0';" class="float-left submit-button" >Non-citizens</button>
   <button onClick="window.location='?citizen=1';" class="float-left submit-button" >Citizens</button>
+  <button onClick="window.location='?rent=1';" class="float-left submit-button" >Rent <$500</button>
+  <button onClick="window.location='?rent=2';" class="float-left submit-button" >Rent $500-$1000</button>
+  <button onClick="window.location='?rent=3';" class="float-left submit-button" >Rent $1000-$2000</button>
+  <button onClick="window.location='?rent=4';" class="float-left submit-button" >Rent >$2000</button>
   ul
   each val, index in body
     li#data= index + ': ' + val
