--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ block content
   p Total usable entries: #{title}
   h4 Filters:
   <button onClick="window.location='?citizen=0';" class="float-left submit-button" >Non-citizens</button>
-  <button onClick="window.location='?citizen=1';" class="float-left submit-button" >Citizens</button>  <button onClick="window.location='?rent=1';" class="float-left submit-button" >Rent <$500</button>
+  <button onClick="window.location='?citizen=1';" class="float-left submit-button" >Citizens</button>
   <button onClick="window.location='?rent=1';" class="float-left submit-button" >Rent >$500</button>
   <button onClick="window.location='?rent=2';" class="float-left submit-button" >Rent $500-$1000</button>
   <button onClick="window.location='?rent=3';" class="float-left submit-button" >Rent $1000-$2000</button>
