PRETTIFICATION: styles, nav bar, filters, percents, fonts

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,13 @@
 doctype html
 html
   head
-    title= title
+    <div class="navbar">
+      <a href="/">Mold</a>
+      <a href="/roach">Infestations</a>
+      <a href="/data">Data</a>
+      <a href="/about">About</a>
+    </div>
+    title= title + 'ji'
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
