--- a/views/roach.pug
+++ b/views/roach.pug
@@ -22,5 +22,5 @@ block content
     br
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     script
-        include ../routes/d3.js
-  </div>
+      include ../routes/d3roach.js
+  <div class="content">
