--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,20 +1,32 @@
 body {
-  padding: 50px;
+  padding-left: 0px;
   background-color: #F1ECCE; /* eegg creame */
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   color: #331832;
+  margin: 0px;
+  margin-top: 100px;
+}
+
+.content {
+  margin-left: 50px;
 }
 
 h1 {
   color: #331832;
+  font-size: 40px;
 }
 
 a {
   color: #331832;
 }
 
+svg {
+  margin-left: 55px;
+}
+
 svg rect {
-   fill: #726DA8; /*purple*/
+  fill: #726DA8; /*purple*/
+
 }
 
 text {
@@ -22,75 +34,51 @@ text {
 }
 
 svg text {
-   color: #331832;
-   font: 15px sans-serif;
+  color: #331832;
+  font: 15px sans-serif;
 }
 
 button {
   background-color: #9FC2CC;
   border-radius: 7px;
   color: #331832;
+  font-size: 18px;
 }
 
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
+
+
+.navbar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0px;
+  overflow: hidden;
+  background-color: #726DA8;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+  border-bottom: 8px solid #9FC2CC;
+  border-top: 8px solid #9FC2CC;
 }
 
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+.navbar a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 20px 50px;
+  text-decoration: none;
+  float: left;
+  font-size: 20px;
+  border-right: 8px solid #726DA8;
+  border-left: 8px solid #726DA8;
 }
 
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #9FC2CC;
-  -webkit-transition: .4s;
-  transition: .4s;
+/* Change the link color to #111 (black) on hover */
+.navbar a:hover {
+  border-right: 8px solid #9FC2CC;
+  border-left: 8px solid #9FC2CC;
+  background-color: #331832;
 }
 
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: #9FC2CC;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: #9FC2CC;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #9FC2CC;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
+hr {
+  border: 3px #331832 solid;
 }
