--- a/views/data.pug
+++ b/views/data.pug
@@ -1,9 +1,13 @@
 extends layout
 
 block content
-  h1 American Housing Survey Data Visualization
-  ul
-  -var i = 1
-  each val, index in body
-    li#data= i++ + ': ' + index + ': ' + val
-  br
+  <div class="content">
+    h1 American Housing Survey Data Visualization
+
+    <p>This is a selection of data from a single household.</p>
+    ul
+    -var i = 1
+    each val, index in body
+      li#data= i++ + ': ' + index + ': ' + val
+    br
+  </div>
