--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,7 +7,8 @@ html
       <a href="/data">Data</a>
       <a href="/about">About</a>
     </div>
-    title= title + 'ji'
+    title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    <link rel="icon" href="/favicon.ico?" type="image/x-icon">
   body
     block content
