--- a/views/about.pug
+++ b/views/about.pug
@@ -6,7 +6,7 @@ block content
 
     p For this project we used the data obtained by The American Housing Survey (AHS). The AHS is sponsored by the Department of Housing and Urban Development (HUD) and conducted by the U.S. Census Bureau. The survey is the most comprehensive national housing survey in the United States. 
 
-    p We hope this project sheds a light on the ways housing conditions disproportionately impact certain groups.
+    p We hope this project sheds light on the ways housing conditions disproportionately impact certain groups.
 
 
   </div>
