finish about page and add photo

--- a/views/about.pug
+++ b/views/about.pug
@@ -1,12 +1,13 @@
 extends layout
 
 block content
-  <div class="content">
+  <div class="content" class="about">
+    img(src='/images/bexandrose.JPG' align='right')
     p Bex and Rose developed this as a part of their Senior Capstone Project in Fall 2018.
 
-    p For this project we used the data obtained by The American Housing Survey (AHS). The AHS is sponsored by the Department of Housing and Urban Development (HUD) and conducted by the U.S. Census Bureau. The survey is the most comprehensive national housing survey in the United States. 
+    p For this project we used the data obtained by The American Housing Survey (AHS). The AHS is sponsored by the Department of Housing and Urban Development (HUD) and conducted by the U.S. Census Bureau. The survey is the most comprehensive national housing survey in the United States.
 
     p We hope this project sheds light on the ways housing conditions disproportionately impact certain groups.
 
-
+    p You can find our code <a href="https://github.com/hiimbex/capstone" target="_blank">here</a>.
   </div>
