--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,19 @@ body {
   margin-left: 50px;
 }
 
+.about {
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  color: #331832;
+  margin-right: 200px;
+}
+
+img {
+  width: 40%;
+  height: 40%;
+  margin-right: 200px;
+  margin-left: 100px;
+}
+
 h1 {
   color: #331832;
   font-size: 40px;
