change homepage to be about

--- a/views/about.pug
+++ b/views/about.pug
@@ -3,7 +3,10 @@ extends layout
 block content
   <div class="content" class="about">
     img(src='/images/bexandrose.JPG' align='right')
-    p Bex and Rose developed this as a part of their Senior Capstone Project in Fall 2018.
+    h1 American Housing Survey Data Visualization Project
+    h2 Computer Science Capstone Project, Fall 2018
+    br
+    p Bex and Rose developed this as a part of their Senior Capstone Project in Fall 2018 at American University.
 
     p For this project we used the data obtained by The American Housing Survey (AHS). The AHS is sponsored by the Department of Housing and Urban Development (HUD) and conducted by the U.S. Census Bureau. The survey is the most comprehensive national housing survey in the United States.
 
