--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,10 +2,10 @@ doctype html
 html
   head
     <div class="navbar">
-      <a href="/">Mold</a>
+      <a href="/mold">Mold</a>
       <a href="/roach">Infestations</a>
       <a href="/data">Data</a>
-      <a href="/about">About</a>
+      <a href="/">About</a>
     </div>
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
